# UnifiedMLM

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/eval/: deepseek_vl2_small_mmbench_subset.yaml  glm4v_9b_mmbench_subset.yaml  internvl3_5_mmbench_subset.yaml  kimi_vl_a3b_mmbench_subset.yaml  llava15_mmbench.yaml  llava15_mmbench_subset.yaml  llava_ov15_mmbench_subset.yaml  molmo2_8b_mmbench_subset.yaml  molmo2_o_7b_mmbench_subset.yaml  phi4_mm_mmbench_subset.yaml  pixtral12b_mmbench_subset.yaml  qwen25vl_mmbench_subset.yaml  qwen3vl_mmbench_subset.yaml
docs/: ENVS.md  SETUP.md
scripts/: download_new_models.sh  download_overnight.sh  run_smoke.sh
unifiedmlm/: cli.py
unifiedmlm/benchmarks/: __init__.py  base.py  mmbench.py  registry.py
unifiedmlm/eval/: __init__.py  extractor.py  runner.py
unifiedmlm/models/: __init__.py  base.py  deepseek_vl2.py  glm4v.py  internvl3_5.py  kimi_vl.py  llava.py  llava_onevision15.py  molmo2.py  phi4_mm.py  pixtral.py  qwen2_5_vl.py  qwen3_vl.py  registry.py
