[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unifiedmlm"
version = "0.1.0"
description = "Unified evaluation (and later training) pipeline for multimodal LLMs, vLLM-accelerated with HF backend fallback."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }

# Pinned to combos verified on 2026-05 with NVIDIA driver 550 / CUDA 12.4.
# torch 2.9+cu128 wheel forward-compatible on 12.4 driver.
dependencies = [
  # ---- inference ----
  "vllm>=0.11.2,<0.12",
  "torch>=2.9,<3.0",
  "torchvision>=0.24,<0.25",
  "transformers>=4.57,<4.58",
  "tokenizers>=0.22,<0.23",
  "accelerate>=1.13",
  # ---- multimodal ----
  "pillow>=10",
  "datasets>=4",
  "timm>=1.0",           # DeepSeek-VL2 vision tower
  "qwen-vl-utils>=0.0.14",  # LLaVA-OneVision-1.5 HF backend
  # ---- answer extraction ----
  "sentence-transformers>=5",
  "scikit-learn>=1.3",
  # ---- HF & utilities ----
  "huggingface-hub>=0.36",
  "hf-transfer>=0.1.9",
  "pyyaml>=6",
  "tqdm>=4.66",
  "numpy>=2",
  "pandas>=2",
]

[project.scripts]
unifiedmlm-eval = "unifiedmlm.cli:main"

[tool.setuptools.packages.find]
include = ["unifiedmlm*"]

# uv: 用 PyTorch wheel index 拉 cu12 build。
# vLLM 0.11.2 自己会拉 torch 2.9 + 一堆 nvidia-*-cu12 lib，所以这里 explicit-index
# 主要是当 uv resolver 卡在 PyPI 的 cu13 wheel 时强制走 cu12 备选。
[tool.uv]
# 优先 PyPI，找不到再 fallback 到 PyTorch index
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# 默认 torch 走 cu128 build（match driver 12.4 forward-compat 已验证）
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
